--- a/index.html
+++ b/index.html
@@ -101,13 +101,10 @@
                 </div>
 
 
-                <div class="card-projeto " id="visivel" data-anime="down">
+                <div class="card-projeto hidden" id="hidden" data-anime="down">
                     <img src="assets/img/tela-loading.jpg" alt="">
                 </div>
-                <div class="card-projeto visivel" id="visivel" data-anime="down">
-                    <img src="assets/img/tela-loading.jpg" alt="">
-                </div>
-                <div class="card-projeto visivel" id="visivel" data-anime="down">
+                <div class="card-projeto hidden" id="hidden" data-anime="down">
                     <img src="assets/img/tela-loading.jpg" alt="">
                 </div>
             </div>
@@ -155,8 +152,8 @@
     </main>
 
     <footer>
-        <p>Email: jalimag0206@gmail.com</p>
         <p>Developed by: José Lima</p>
+        <p>Email: jalimag0206@gmail.com</p>
     </footer>
 
     <script type="module" src="assets/js/main.js"></script>
