arrumando os botões

--- a/index.html
+++ b/index.html
@@ -70,12 +70,7 @@
 
                     <div class="sobre-right">
                         <div class="texto-sobre" data-anime="right">
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia dolore assumenda
-                                perspiciatis
-                                eum accusamus dignissimos ad nisi odit doloremque magni et excepturi, delectus facere
-                                cum
-                                illum
-                                vel nulla autem. Vitae.</p>
+                            <p>Olá! Eu me chamo José, tenho 18 anos e atualmente estudo a área front-end com objetivo de me tornar um desenvolvedor full stack futuramente. Me considero ágil, focado e consistente no estudo de novas tecnologias e busco sempre aprimorar meu conhecimento estando em um constante aprendizado  </p>
                         </div>
 
 
