ajustando links dos botões

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <h1 id="name" class="name">José Lima</h1>
                     <p class="apresentacao">Desenvolvedor front-end</p>
                     <div class="principal-button">
-                        <a href="https://github.com/JoseLima04" target="_blank">
+                        <a href="https://github.com/devjoselima" target="_blank">
                             <div class="github-Button">
                                 <img src="assets/img/github-icon.png" alt="">
                                 <p>GitHub</p>
@@ -133,7 +133,7 @@
                     <div class="vermais-Button" id="ver-mais">
                         <p>Ver mais</p>
                     </div>
-                    <a href="https://github.com/JoseLima04?tab=repositories" target="_blank">
+                    <a href="https://github.com/devjoselima?tab=repositories" target="_blank">
                         <p id="repositorios-git" data-anime="up">Ver repositórios no GitHub</p>
                     </a>
                 </div>
