--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="/assets/css/scroll.css">
     <link rel="stylesheet" href="/assets/css/responsivo.css">
@@ -84,10 +86,10 @@
                                 </div>
                             </a>
 
-                            <a href="https://api.whatsapp.com/send?phone=5521976341635" target="_blank">
+                            <a href="assets/curriculo.pdf" download="">
                                 <div class="sobre-mim_contato">
-                                    <img src="assets/img/wppIcon.png" alt="">
-                                    <p>Contato</p>
+                                    <img src="assets/img/email.png" alt="">
+                                    <p>Currículo</p>
                                 </div>
                             </a>
                         </div>
@@ -212,8 +214,16 @@
 
     <!-- Rodapé -->
     <footer>
-        <p>Developed by: José Lima</p>
-        <p>Email: jalimag0206@gmail.com</p>
+        <div class="copy">
+            <img src="assets/img/copyright.png">
+                <p>Developed by: José Lima</p>
+            </img>
+        </div>
+        <div class="email">
+            <img src="assets/img/email.png">
+                <p>Email: jalimag0206@gmail.com</p>
+            </img>
+        </div>
     </footer>
     <!-- Rodapé -->
     <script type="module" src="assets/js/main.js"></script>
