iniciando card projetos

--- a/index.html
+++ b/index.html
@@ -108,6 +108,16 @@
         <section id="projetos">
             <div class="projetos">
                 <h2 data-anime="down">Meus projetos</h2>
+                <div class="card">
+                    <div class="icon">
+                        <img src="assets/img/projeto1.PNG" alt="">
+                    </div>
+                    <div class="content">
+                        <h3>Quiz Copa do Mundo</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem debitis dignissimos praesentium amet quia voluptatum voluptates aliquid in? Atque corrupti labore alias accusamus, aut delectus quod libero aperiam autem nisi.</p>
+                    </div>
+                    <button id="read-button">Ler mais</button>
+                </div>
             </div>    
 
 
