cards projetos finalizados

--- a/index.html
+++ b/index.html
@@ -106,17 +106,51 @@
 
         <!-- Meus projetos -->
         <section id="projetos">
-            <div class="projetos">
-                <h2 data-anime="down">Meus projetos</h2>
-                <div class="card">
-                    <div class="icon">
-                        <img src="assets/img/projeto1.PNG" alt="">
+            <h2 data-anime="down">Meus projetos</h2>
+            <div class="projetos">               
+                <div class="container-cards">
+                    <div class="card">
+                        <div class="icon">
+                            <a href="https://quiz-copa.vercel.app/" target="_blank"><img src="assets/img/projeto2.PNG" alt=""></a>
+                        </div>
+                        <div class="content">
+                            <h3>Quiz Copa do Mundo</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem debitis dignissimos praesentium amet quia voluptatum voluptates aliquid in? Atque corrupti labore alias accusamus, aut delectus quod libero aperiam autem nisi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur reiciendis suscipit ab nobis quam adipisci, omnis officia a impedit! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure assumenda commodi architecto corrupti itaque incidunt, voluptatum earum velit sapiente repellat nesciunt numquam sed eligendi alias? Nemo optio necessitatibus nam et?</p>
+                        </div>
+                        <button class="read-button">Ler mais</button>
                     </div>
-                    <div class="content">
-                        <h3>Quiz Copa do Mundo</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem debitis dignissimos praesentium amet quia voluptatum voluptates aliquid in? Atque corrupti labore alias accusamus, aut delectus quod libero aperiam autem nisi.</p>
+                    
+                    <div class="card">
+                        <div class="icon">
+                            <a href="https://quiz-copa.vercel.app/" target="_blank"><img src="assets/img/projeto2.PNG" alt=""></a>
+                        </div>
+                        <div class="content">
+                            <h3>Quiz Copa do Mundo</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem debitis dignissimos praesentium amet quia voluptatum voluptates aliquid in? Atque corrupti labore alias accusamus, aut delectus quod libero aperiam autem nisi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur reiciendis suscipit ab nobis quam adipisci, omnis officia a impedit! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure assumenda commodi architecto corrupti itaque incidunt, voluptatum earum velit sapiente repellat nesciunt numquam sed eligendi alias? Nemo optio necessitatibus nam et?</p>
+                        </div>
+                        <button class="read-button">Ler mais</button>
                     </div>
-                    <button id="read-button">Ler mais</button>
+                    <div class="card">
+                        <div class="icon">
+                            <a href="https://quiz-copa.vercel.app/" target="_blank"><img src="assets/img/projeto2.PNG" alt=""></a>
+                        </div>
+                        <div class="content">
+                            <h3>Quiz Copa do Mundo</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem debitis dignissimos praesentium amet quia voluptatum voluptates aliquid in? Atque corrupti labore alias accusamus, aut delectus quod libero aperiam autem nisi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur reiciendis suscipit ab nobis quam adipisci, omnis officia a impedit! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure assumenda commodi architecto corrupti itaque incidunt, voluptatum earum velit sapiente repellat nesciunt numquam sed eligendi alias? Nemo optio necessitatibus nam et?</p>
+                        </div>
+                        <button class="read-button">Ler mais</button>
+                    </div>
+
+                    <div class="card">
+                        <div class="icon">
+                            <a href="https://quiz-copa.vercel.app/" target="_blank"><img src="assets/img/projeto2.PNG" alt=""></a>
+                        </div>
+                        <div class="content">
+                            <h3>Quiz Copa do Mundo</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem debitis dignissimos praesentium amet quia voluptatum voluptates aliquid in? Atque corrupti labore alias accusamus, aut delectus quod libero aperiam autem nisi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur reiciendis suscipit ab nobis quam adipisci, omnis officia a impedit! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure assumenda commodi architecto corrupti itaque incidunt, voluptatum earum velit sapiente repellat nesciunt numquam sed eligendi alias? Nemo optio necessitatibus nam et?</p>
+                        </div>
+                        <button class="read-button">Ler mais</button>
+                    </div>
                 </div>
             </div>    
 
