botao ver mais finalizado

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="projetos">               
                 <div class="container-cards">
 
-                    <div class="card">
+                    <div class="card" data-anime="down">
                         <div class="icon">
                             <a href="https://quiz-copa.vercel.app/" target="_blank"><img src="assets/img/projeto2.PNG" alt=""></a>
                         </div>
@@ -121,7 +121,7 @@
                         <button class="read-button">Ler mais</button>
                     </div>
                     
-                    <div class="card card2">
+                    <div class="card card2" data-anime="down">
                         <div class="icon">
                             <a href="https://quiz-copa.vercel.app/" target="_blank"><img src="assets/img/projeto2.PNG" alt=""></a>
                         </div>
@@ -131,7 +131,7 @@
                         </div>
                         <button class="read-button read-button2 ">Ler mais</button>
                     </div>
-                    <div class="card card3 hidden">
+                    <div class="card card3 hidden" data-anime="up">
                         <div class="icon">
                             <a href="https://quiz-copa.vercel.app/" target="_blank"><img src="assets/img/projeto2.PNG" alt=""></a>
                         </div>
@@ -142,7 +142,7 @@
                         <button class="read-button read-button3">Ler mais</button>
                     </div>
 
-                    <div class="card card4 hidden">
+                    <div class="card card4 hidden" data-anime="up">
                         <div class="icon">
                             <a href="https://quiz-copa.vercel.app/" target="_blank"><img src="assets/img/projeto2.PNG" alt=""></a>
                         </div>
