card e botões finalizados

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="projetos">               
                 <div class="container-cards">
 
-                    <div class="card" data-anime="down">
+                    <div class="card" data-anime="left">
                         <div class="icon">
                             <a href="https://quiz-copa.vercel.app/" target="_blank"><img src="assets/img/projeto2.PNG" alt=""></a>
                         </div>
@@ -121,7 +121,7 @@
                         <button class="read-button">Ler mais</button>
                     </div>
                     
-                    <div class="card card2" data-anime="down">
+                    <div class="card card2" data-anime="left">
                         <div class="icon">
                             <a href="https://quiz-copa.vercel.app/" target="_blank"><img src="assets/img/projeto2.PNG" alt=""></a>
                         </div>
@@ -154,6 +154,7 @@
                     </div>
                 </div>
                 <button class="verMais-projetos">Ver mais</button>
+                <a href="https://github.com/devjoselima?tab=repositories" target="_blank" class="link-repositorios">Ver repositórios no github</a>
             </div>    
 
 
