--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
                             </a>
                         </div>
 
-                        <!-- <div class="content">
+                        <div class="content">
                             <h3>Em breve</h3>
-                            <p></p>
+                             <!--<p></p>
                         </div>
                         <p class="used-techs-paragraph">Técnologias usadas:</p>
                         <ul class="used-techs">
@@ -216,9 +216,9 @@
                             </a>
                         </div>
 
-                        <!-- <div class="content">
+                        <div class="content">
                             <h3>Em breve</h3>
-                            <p></p>
+                             <!--<p></p>
                         </div>
                         <p class="used-techs-paragraph">Técnologias usadas:</p>
                         <ul class="used-techs">
