--- a/index.html
+++ b/index.html
@@ -176,17 +176,17 @@
 
 
                     <div class="card card3 hidden">
-                        <div class="icon">
+                        <!-- <div class="icon">
                             <a href="" target="_blank">
                                 <img src="" alt="">
                             </a>
-                        </div>
+                        </div> -->
 
                         <div class="content">
                             <h3>Em breve</h3>
-                             <!--<p></p>
+                            <p></p>
                         </div>
-                        <p class="used-techs-paragraph">Técnologias usadas:</p>
+                        <!--<p class="used-techs-paragraph">Técnologias usadas:</p>
                         <ul class="used-techs">
                             <li>HTML5</li>
                             <li>CSS3</li>
@@ -210,17 +210,17 @@
 
 
                     <div class="card card4 hidden">
-                        <div>
+                        <!-- <div>
                             <a href="#" target="_blank">
                                 <img src="" alt="">
                             </a>
-                        </div>
+                        </div> -->
 
-                        <div class="content">
+                         <div class="content">
                             <h3>Em breve</h3>
-                             <!--<p></p>
+                            <p></p>
                         </div>
-                        <p class="used-techs-paragraph">Técnologias usadas:</p>
+                    <!-- <p class="used-techs-paragraph">Técnologias usadas:</p>
                         <ul class="used-techs">
                             <li>HTML5</li>
                             <li>CSS3</li>
@@ -290,7 +290,7 @@
                         <img class="github" src="assets/img/logo-github.png" alt="logo-github">
                     </div>
 
-                    <div class="skill react" id="react">
+                    <div class="skill react">
                         <img class="react" src="assets/img/logo-react.png" alt="logo-react">
                     </div>
 
