--- a/index.html
+++ b/index.html
@@ -61,10 +61,7 @@
             <h2 data-anime="down">Sobre mim</h2>
 
             <p class="about-content" data-anime>
-                Olá! Eu me chamo José, tenho 18 anos e atualmente estudo a área front-end com objetivo de me tornar um
-                desenvolvedor full stack futuramente. Me considero ágil, focado e consistente no estudo de novas
-                tecnologias e busco sempre aprimorar meu conhecimento estando em um
-                constante aprendizado.
+                Olá! Eu me chamo José, tenho 18 anos, amo jogar, assistir lives e estudar sobre tecnologias novas. Meu primeiro contato com programação foi durante meu ensino medio tendo aulas de html e css, atualmente, estudo a área de front end mas desejo me tornar um desenvolvedor full stack no futuro.
             </p>
 
 
