--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
         <!-- Tela principal -->
         <section class="home">
-            <div class="home-left" data-anime="down" data-anime>
+            <div class="home-left" >
                 <h1 class="name">José Lima</h1>
-                <span>Front end web developer</span>
+                <span class="cargo">Front end web developer</span>
                 <div class="principal-button">
                     <a href="https://github.com/devjoselima" target="_blank">
                         <div class="github-Button">
