--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </a>
                 </div>
             </div>
-            <div class="home-right" data-anime="down" data-anime>
+            <div class="home-right" data-anime>
                 <img src="assets/img/dev.png" alt="dev">
             </div>
 
@@ -58,7 +58,7 @@
 
         <!-- Sobre mim -->
         <section class="sobre" id="sobre">
-            <h2 data-anime="down">Sobre mim</h2>
+            <h2 data-anime>Sobre mim</h2>
 
             <p class="about-content" data-anime>
                 Olá! Eu me chamo José, tenho 18 anos, amo jogar, assistir lives e estudar sobre tecnologias novas. Meu primeiro contato com programação foi durante meu ensino medio tendo aulas de html e css, atualmente, estudo a área de front end mas desejo me tornar um desenvolvedor full stack no futuro.
@@ -241,8 +241,8 @@
                 </div>
 
 
-                <button class="verMais-projetos">Ver mais</button>
-                <a href="https://github.com/devjoselima?tab=repositories" class="other-repositories">Ver outros
+                <button class="verMais-projetos" data-anime>Ver mais</button>
+                <a href="https://github.com/devjoselima?tab=repositories" class="other-repositories" data-anime>Ver outros
                     repositorios</a>
             </div>
 
@@ -259,12 +259,12 @@
             <h2 data-anime="down">Habilidades</h2>
 
             <div class="skill-container">
-                <div class="skill-info" data-anime="left" data-anime>
+                <div class="skill-info" data-anime>
                     <h3 class="skill-title">/* Passe o mouse e veja mais sobre cada skill */</h3>
                     <p class="skill-content"></p>
                 </div>
 
-                <div class="container-tech" data-anime="right" data-anime>
+                <div class="container-tech" data-anime>
 
                     <div class="skill html">
                         <img class="html" src="assets/img/logo-html.png" alt="logo-html">
