--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <nav id="nav" data-anime>
             <span class="btn-menu"></span>
             <ul id="list-menu">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#sobre">Sobre</a></li>
-                <li><a href="#projetos">Projetos</a></li>
-                <li><a href="#skills">Habilidades</a></li>
+                <li><a href="#section-home">Home</a></li>
+                <li><a href="#section-aboutMe">Sobre</a></li>
+                <li><a href="#section-projects">Projetos</a></li>
+                <li><a href="#section-skills">Habilidades</a></li>
             </ul>
         </nav>
     </header>
@@ -36,7 +36,7 @@
     <main>
 
         <!-- Tela principal -->
-        <section class="home">
+        <section id="section-home" class="section-home">
             <div class="home-left" >
                 <h1 class="name">José Lima</h1>
                 <span class="job">Front end web developer</span>
@@ -59,7 +59,7 @@
 
 
         <!-- Sobre mim -->
-        <section id="aboutMe" class="section-aboutMe"" >
+        <section id="section-aboutMe" class="section-aboutMe"" >
             <h2 data-anime>Sobre mim</h2>
 
             <p class="about-content" data-anime>
@@ -92,7 +92,7 @@
 
 
         <!-- Meus projetos -->
-        <section id="projects" class="section-projects">
+        <section id="section-projects" class="section-projects">
             <h2 data-anime="down">Meus projetos</h2>
             <div class="container-projects">
                 <div class="container-cards" data-anime>
@@ -257,7 +257,7 @@
 
 
         <!-- Habilidades -->
-        <section id="skills" class="section-skills">
+        <section id="section-skills" class="section-skills">
             <h2 data-anime="down">Habilidades</h2>
 
             <div class="skill-container">
