--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
 
         <!-- Tela principal -->
-        <section id="section-home" class="section-home">
+        <section class="home">
             <div class="home-left" >
                 <h1 class="name">José Lima</h1>
                 <span class="job">Front end web developer</span>
@@ -192,7 +192,6 @@
                             <li>Javascript</li>
                             <li>React</li>
                         </ul>
-
                         <div class="container-buttons-card">
                             <a href="">
                                 <button class="button-card">
@@ -226,7 +225,6 @@
                             <li>Javascript</li>
                             <li>React</li>
                         </ul>
-
                         <div class="container-buttons-card">
                             <a href="">
                                 <button class="button-card">
