--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/assets/css/scroll.css">
     <link rel="stylesheet" href="/assets/css/responsivo.css">
     
-    <title>Jose Lima - Portfolio</title>
+    <title>Portfolio</title>
 </head>
 
 <body>
