--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
     <!-- Rodapé -->
     <footer>
-        <span>&copy; Developed by: José Lima</span>
+        <span>&copy; Developed by: <span class="footer-name">José Lima</span></span>
         <span>Contact: <a href="mailto:jalimag0206@gmail.com">jalimag0206@gmail.com</a></span>
     </footer>
     <!-- Rodapé -->
