add new project

--- a/index.html
+++ b/index.html
@@ -175,35 +175,35 @@
 
 
                     <div class="card card3 hidden">
-                        <!-- <div class="icon">
+                        <div class="icon">
                             <a href="" target="_blank">
-                                <img src="" alt="">
+                                <img src="assets/img/projeto3.PNG" alt="">
                             </a>
-                        </div> -->
+                        </div> 
 
                         <div class="content">
-                            <h3>Em breve</h3>
-                            <p></p>
+                            <h3>Dictionary app</h3>
+                            <p>Um dicionário de palavras em inglês.Neste projeto utilizei a api Dictionary, na qual fornece todas as definições das palavras</p>
                         </div>
-                        <!--<p class="used-techs-paragraph">Técnologias usadas:</p>
+                        <p class="used-techs-paragraph">Técnologias usadas:</p>
                         <ul class="used-techs">
                             <li>HTML5</li>
                             <li>CSS3</li>
                             <li>Javascript</li>
-                            <li>React</li>
+                            <li>API</li>
                         </ul>
                         <div class="container-buttons-card">
-                            <a href="">
+                            <a href="https://github.com/devjoselima/dictionary-app" target="_blank">
                                 <button class="button-card">
                                     Ver repositório
                                 </button>
                             </a>
-                            <a href="">
+                            <a href="https://dictionary-app-sand.vercel.app/" target="_blank">
                                 <button class="button-card">
                                     Ver projeto
                                 </button>
                             </a>
-                        </div> -->
+                        </div>
                     </div>
 
 
